working towards forms reactive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,39 @@
-<h1>
-  {{title}}
-</h1>
+
+<!--Navbar-->
+<nav class="navbar navbar-fixed-top navbar-dark primary-color-dark bg-faded" role="navigation">
+
+    <!-- Collapse button-->
+    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapseEx2">
+        <i class="fa fa-bars"></i>
+    </button>
+
+    <div class="container">
+
+        <!--Collapse content-->
+        <div class="collapse navbar-toggleable-xs" id="collapseEx2">
+            <!--Navbar Brand-->
+            <a class="navbar-brand">Navbar</a>
+            <!--Links-->
+            <ul class="nav navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Pricing</a>
+                </li>
+                <li class="nav-item float-xs-right">
+                    <a class="nav-link" [routerLink]="['/auth']">Sign In</a>
+                </li>
+            </ul>
+        </div>
+        <!--/.Collapse content-->
+
+    </div>
+
+</nav>
+<!--/.Navbar-->
+
 <router-outlet></router-outlet>
